# dots

./: .gitpod.yml  Cargo.toml  Makefile  README.md  dot-test
src/: dot-test  dotfile.rs  main.rs
test-home/: .sample.conf  .samplerc
