[package]
name = "dots"
version = "0.1.0"
edition = "2021"
description = "CLI for managing dot-files."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
clap = { version = "3.1.1", features = ["derive", "env"] }
colored = "2.0.0"
shellexpand = "2.1.0"
skim = "0.9.4"
